--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/resources/js
-/resources/css
+/public/js
+/public/css
 /.idea
 /.vscode
