--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:S3ZZn8PmHgk5CsAN5u5nhkBeJuBToosJupeoipaBQXo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,14 +9,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=korvax
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=user
+DB_PASSWORD=user
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
